# Bellecour

./: README.md  index.html  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
.github/workflows/: release.yml
docs/: index.html
src/: App.css  App.tsx  transformations.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  enrich.rs  focus.rs  lib.rs  main.rs  paste.rs  shortcuts.rs  transcribe.rs  usage.rs
src/components/: RecordingOverlay.css  RecordingOverlay.tsx  SettingsPanel.css  SettingsPanel.tsx  Waveform.tsx
src/hooks/: useAudioRecorder.ts
