[package]
name = "belcour"
version = "0.1.0"
edition = "2021"

[lib]
name = "belcour_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
arboard = "3"
core-graphics = "0.23"
reqwest = { version = "0.12", features = ["multipart", "json"] }
